# StateMachine

./: .gitignore  CMakeLists.txt  README.md
include/: StateMachine.hpp
src/: StateMachine.cpp
test/: CMakeLists.txt  common.hpp  test.cc  test_names.hpp
